--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -14,6 +14,11 @@
     margin-left: 40px;
 }
 
+.topnav {
+     margin-left: 40px;
+     margin-top: 40px;
+}
+
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
