--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -7,20 +7,29 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
+
         <div class="content container">
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">My blog</a></h1>
         </div>
+
+        <div class="topnav">
+             <a href="#home">Główna</a>
+             <a href="#Books">Powieści</a>
+             <a href="#Reviews">Recenzje</a>
+             <a href="#about">O mnie</a>
+             <a href="#login">Logowanie</a>
+         </div>
 
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
                     {% for post in posts %}
                         <div class="post">
+                            <h1><a href="">{{ post.title }}</a></h1>
+                            <p>{{ post.text|linebreaksbr }}</p>
                             <div class="date">
                                 <p>published: {{ post.published_date }}</p>
                             </div>
-                            <h1><a href="">{{ post.title }}</a></h1>
-                            <p>{{ post.text|linebreaksbr }}</p>
                         </div>
                     {% endfor %}
                 </div>
