registration with email verification

--- a/mysite/blog/templates/reviews/reviewsList.html
+++ b/mysite/blog/templates/reviews/reviewsList.html
@@ -14,7 +14,7 @@
 
         <div class="topnav">
              <a href="../">Główna</a>
-             <a href="../">Teksty</a>
+             <a href="../books">Teksty</a>
              <a href="/">Recenzje</a>
              <a href="../aboutMe">O mnie</a>
              <a href="../login">Logowanie</a>
