--- a/mysite/blog/templates/about/aboutMe.html
+++ b/mysite/blog/templates/about/aboutMe.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About Me</title>
-</head>
-<body>
-Coś o mnie
-</body>
+{% load static %}
+<html>
+    <head>
+        <title>My blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    </head>
+    <body>
+
+        <div class="content container">
+            <h1><a href="/">My blog</a></h1>
+        </div>
+
+        <div class="topnav">
+             <a href="../">Główna</a>
+             <a href="../books">Teksty</a>
+             <a href="../reviews/">Recenzje</a>
+             <a href="/">O mnie</a>
+             <a href="../login">Logowanie</a>
+         </div>
+
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                   
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
