--- a/mysite/blog/templates/login/loginTemplate.html
+++ b/mysite/blog/templates/login/loginTemplate.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Log in</title>
-</head>
-<body>
-Logowanie, zmiana haseł itp
-</body>
+{% load static %}
+<html>
+    <head>
+        <title>My blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    </head>
+    <body>
+
+        <div class="content container">
+            <h1><a href="/">My blog</a></h1>
+        </div>
+
+        <div class="topnav">
+             <a href="../">Główna</a>
+             <a href="../books">Teksty</a>
+             <a href="../reviews/">Recenzje</a>
+             <a href="/aboutMe">O mnie</a>
+             <a href="/">Logowanie</a>
+         </div>
+
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1>Logowanie</h1>
+                <hr>
+
+                <form class="site-from" action="" method="post">
+                    {% csrf_token %}
+                    <p>{{ form.errors }}</p>
+                    <p>Username:</p>
+                    <p>{{ form.username }}</p>
+
+                    <p>Password:</p>
+                    <p>{{ form.password }}</p>
+
+                    <input type="submit" value="Signup" name="SignUpForm">
+                    </form>
+                    Jeśli nie posiadasz jeszcze konta, <a href="/signup">Zarejestruj się</a>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
