--- a/mysite/blog/templates/reviews/reviewsList.html
+++ b/mysite/blog/templates/reviews/reviewsList.html
@@ -16,8 +16,12 @@
              <a href="../">Główna</a>
              <a href="../books">Teksty</a>
              <a href="/">Recenzje</a>
-             <a href="../aboutMe">O mnie</a>
+             <a href="/aboutMe">O mnie</a>
+             {% if user.is_authenticated %}
+             <a class="nav-link" href="../logout"><i class="fa fa-sign-out-alt fa-1x"></i>Wyloguj({{ user.username }})</a>
+             {% else %}
              <a href="../login">Logowanie</a>
+             {% endif %}
          </div>
 
         <div class="content container">
