--- a/mysite/blog/templates/blog/postList.html
+++ b/mysite/blog/templates/blog/postList.html
@@ -29,7 +29,7 @@
                 <div class="col-md-8">
                     {% for post in posts %}
                         <div class="post">
-                            <h1><a href="">{{ post.title }}</a></h1>
+                            <h1><a href="{{post.id}}">{{ post.title }}</a></h1>
                             <p>{{ post.text|linebreaksbr }}</p>
                             <div class="date">
                                 <p>published: {{ post.published_date }}</p>
