finished main page and post details frontend, navbar upgrade and background

--- a/mysite/blog/templates/signup.html
+++ b/mysite/blog/templates/signup.html
@@ -1,20 +1,90 @@
-{% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-      {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-          <small style="display: none">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
-      {% endfor %}
+{% load static %}
+<html>
+   <head>
+        <title>Logowanie</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
-    <button type="submit">Sign up</button>
-  </form>
-{% endblock %}
+    </head>
+    <body background="../static/images/background.jpg">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Aleksander Cuch</a>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            </div>
+                <ul class="nav navbar-nav navbar-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../">STRONA GŁÓWNA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../aboutMe">O MNIE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../books">TEKSTY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../reviews">RECENZJE</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="../contact">KONTAKT</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Wyloguj ({{ user.username }})</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="../signup"><span class="fas fa-user"></span> Rejestracja</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../login"><span class="fas fa-sign-in-alt"></span> Logowanie</a>
+                    </li>
+                    {% endif %}
+                </ul>
+
+            </div>
+        </nav>
+
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+
+                  {% block content %}
+                  <h2>Sign up</h2>
+                    <form method="post">
+                      {% csrf_token %}
+                        {% for field in form %}
+                        <p>
+                          {{ field.label_tag }}<br>
+                          {{ field }}
+                          {% if field.help_text %}
+                            <small style="display: none">{{ field.help_text }}</small>
+                          {% endif %}
+                          {% for error in field.errors %}
+                            <p style="color: red">{{ error }}</p>
+                          {% endfor %}
+                        </p>
+                        {% endfor %}
+
+                      <button type="submit">Sign up</button>
+                    </form>
+                  {% endblock %}
+
+
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
+
+
+
