--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -10,21 +10,22 @@
     text-decoration: none;
 }
 
-.content {
-    margin-left: 40px;
+.post {
+
+    background-color: white;
+    opacity: 0.7;
 }
 
-.topnav {
-     margin-left: 40px;
-     margin-top: 40px;
-}
 
-h1, h2, h3, h4 {
+
+h1, h2, h3, h4, p, input {
     font-family: 'Lobster', cursive;
+    margin-left: 10px;
 }
 
 .date {
     color: #828282;
+    margin-top: 10px;
 }
 
 .save {
@@ -43,9 +44,82 @@ h1, h2, h3, h4 {
 }
 
 .post {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
+    border-left-style: solid;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-right: 1px solid gray;
 }
 
-.post h1 a, .post h1 a:visited {
+.post h3 a, .post h3 a:visited {
     color: #000000;
 }
+
+.navbar-nav.navbar-center {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+
+}
+
+.navbar {
+    margin-bottom: 350px;
+}
+
+.nav-link {
+    font-size: large;
+
+}
+
+body {
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.navbar {
+    opacity: 0.7;
+
+}
+
+.carouselExampleControls {
+    width: 50%;
+}
+
+.aboutPanel {
+    text-align: center;
+    background-color: white;
+    opacity: 0.7;
+    border-right-style: solid;
+    border-bottom: 1px solid gray;
+    border-left: 1px solid gray;
+    border-top: 1px solid gray;
+}
+
+.carousel-inner {
+    border: 2px solid gray;
+}
+
+#carouselExampleControls {
+    border: 1px solid black;
+    margin-bottom: 30px;
+}
+
+.commentsSection {
+    background-color: white;
+    opacity: 0.8;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-top: 1px solid gray;
+
+}
+
+hr {
+    color: red;
+    width: 95%;
+}
+
+
+
+
+
