--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -119,7 +119,22 @@ hr {
     width: 95%;
 }
 
+.textDetails  {
+     background-color: white;
+    opacity: 0.7;
+    border-right-style: solid;
+    border-bottom-style: 1px solid gray;
+    border-left-style: solid;
+    border-top: solid;
+}
 
+.textTitle{
+    text-align: center;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
 
 
 
