--- a/mysite/blog/templates/login/loginTemplate.html
+++ b/mysite/blog/templates/login/loginTemplate.html
@@ -42,8 +42,8 @@
                         <a class="nav-link" href="/logout">Wyloguj ({{ user.username }})</a>
                     </li>
                     {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="../signup"><span class="fas fa-user"></span> Rejestracja</a>
+                     <li class="nav-item">
+                        <a class="nav-link" href="../../signup"><span class="fas fa-user"></span> Rejestracja</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href=""><span class="fas fa-sign-in-alt"></span> Logowanie</a>
@@ -56,27 +56,29 @@
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
-                    <h1>Logowanie</h1>
-                <hr>
-                    {% if user.is_authenticated %}
+                <div class="col-md-4">
+                    <div class="post">
+                        <h1>Logowanie</h1>
+                    <hr>
+                        {% if user.is_authenticated %}
 
-                    <p> Jesteś już zalogowany.</p>
+                        <p> Jesteś już zalogowany.</p>
 
-                    {% else %}
+                        {% else %}
 
-                <form class="site-from" action="" method="post">
-                    {% csrf_token %}
-                    <p>Username:</p>
-                    <p>{{ form.username }}</p>
+                    <form class="site-from" action="" method="post">
+                        {% csrf_token %}
+                        <p>Username:</p>
+                        <p>{{ form.username }}</p>
 
-                    <p>Password:</p>
-                    <p>{{ form.password }}</p>
-                    <p>{{ form.errors }}</p>
-                    <input type="submit" value="Signup" name="SignUpForm">
-                    </form>
-                    Jeśli nie posiadasz jeszcze konta, <a href="/signup">Zarejestruj się</a>
-                    {% endif %}
+                        <p>Password:</p>
+                        <p>{{ form.password }}</p>
+                        <p>{{ form.errors }}</p>
+                        <input type="submit" value="Zaloguj się" name="SignUpForm">
+                        </form>
+                        Jeśli nie posiadasz jeszcze konta, <a href="/signup">Zarejestruj się</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
