--- a/mysite/blog/templates/reviews/reviewsList.html
+++ b/mysite/blog/templates/reviews/reviewsList.html
@@ -1,41 +1,83 @@
 {% load static %}
 <html>
     <head>
-        <title>My blog</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <title>Recenzje</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
     </head>
-    <body>
+    <body background="../static/images/background.jpg">
 
-        <div class="content container">
-            <h1><a href="/">My blog</a></h1>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Aleksander Cuch</a>
 
-        <div class="topnav">
-             <a href="../">Główna</a>
-             <a href="../books">Teksty</a>
-             <a href="/">Recenzje</a>
-             <a href="/aboutMe">O mnie</a>
-             {% if user.is_authenticated %}
-             <a class="nav-link" href="../logout"><i class="fa fa-sign-out-alt fa-1x"></i>Wyloguj({{ user.username }})</a>
-             {% else %}
-             <a href="../login">Logowanie</a>
-             {% endif %}
-         </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            </div>
+                <ul class="nav navbar-nav navbar-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../">STRONA GŁÓWNA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../aboutMe">O MNIE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../books">TEKSTY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">RECENZJE</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="../contact">KONTAKT</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Wyloguj ({{ user.username }})</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="../signup"><span class="fas fa-user"></span> Rejestracja</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../login"><span class="fas fa-sign-in-alt"></span> Logowanie</a>
+                    </li>
+                    {% endif %}
+                </ul>
+
+            </div>
+        </nav>
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
-                    {% for review in reviews %}
-                        <div class="post">
-                            <h1><a href="{{review.id}}/">{{review.book}}, {{review.writer}}</a></h1>
-                            <div class="date">
-                                <p>published: {{ review.published_date }}</p>
-                            </div>
-                        </div>
-                    {% endfor %}
+                <div class="col-sm-8">
+                    <div class="post">
+                        <h1>Recenzje książek:</h1>
+                        <h2>Fantasy</h2>
+                        {% for review in reviews %}
+                        <h3><a href="{{review.id}}/">{{review.book}}, {{review.writer}}</a></h3>
+                        <hr>
+                        {% endfor %}
+
+                    </div>
                 </div>
+                <div class="col-sm-4">
+                    <div class="aboutPanel">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">Krótko o mnie</div>
+                            <div class="panel-body">Cześć, jestem Aleksander.</br>
+                            Studiuję informatykę, a w wolnym czasie oddaję się pasji, jaką jest pisanie.</br>
+                            Tworzę opowiadania i powieść w klimatach fantasy, więc jeżeli lubisz ten gatunek, to gorąco zapraszam do zapoznania się z moją twórczością.</br>
+                            Najbardziej cenię sobie szczerą, zasłużoną krytykę ;)</div>
+                        </div>
+                    </div>
+                 </div>
             </div>
         </div>
     </body>
