--- a/mysite/blog/templates/signup.html
+++ b/mysite/blog/templates/signup.html
@@ -56,30 +56,30 @@
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-4">
+                    <div class="post">
+                      {% block content %}
+                      <h1>Rejestracja</h1>
+                        <hr>
+                        <form method="post">
+                          {% csrf_token %}
+                            {% for field in form %}
+                            <p>
+                              {{ field.label_tag }}<br>
+                              {{ field }}
+                              {% if field.help_text %}
+                                <small style="display: none">{{ field.help_text }}</small>
+                              {% endif %}
+                              {% for error in field.errors %}
+                                <p style="color: red">{{ error }}</p>
+                              {% endfor %}
+                            </p>
+                            {% endfor %}
 
-                  {% block content %}
-                  <h2>Sign up</h2>
-                    <form method="post">
-                      {% csrf_token %}
-                        {% for field in form %}
-                        <p>
-                          {{ field.label_tag }}<br>
-                          {{ field }}
-                          {% if field.help_text %}
-                            <small style="display: none">{{ field.help_text }}</small>
-                          {% endif %}
-                          {% for error in field.errors %}
-                            <p style="color: red">{{ error }}</p>
-                          {% endfor %}
-                        </p>
-                        {% endfor %}
-
-                      <button type="submit">Sign up</button>
-                    </form>
-                  {% endblock %}
-
-
+                          <button type="submit">Zarejestruj się</button>
+                        </form>
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
         </div>
