--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -44,11 +44,10 @@ h1, h2, h3, h4, p, input {
 }
 
 .post {
-    margin-bottom: 50px;
-    border-left-style: solid;
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
-    border-right: 1px solid gray;
+    margin-bottom: 20px;
+
+    border: 1px solid gray;
+
 }
 
 .post h3 a, .post h3 a:visited {
@@ -86,13 +85,13 @@ body {
 }
 
 .aboutPanel {
+    margin-top: 10px;
     text-align: center;
     background-color: white;
     opacity: 0.7;
-    border-right-style: solid;
-    border-bottom: 1px solid gray;
-    border-left: 1px solid gray;
-    border-top: 1px solid gray;
+
+    border: 1px solid gray;
+
 }
 
 .carousel-inner {
@@ -100,6 +99,7 @@ body {
 }
 
 #carouselExampleControls {
+    margin-top: 10px;
     border: 1px solid black;
     margin-bottom: 30px;
 }
@@ -120,13 +120,15 @@ hr {
 }
 
 .textDetails  {
-     background-color: white;
+    margin-top: 10px;
+
     opacity: 0.7;
-    border-right-style: solid;
-    border-bottom-style: 1px solid gray;
-    border-left-style: solid;
-    border-top: solid;
+
+
+
+
 }
+
 
 .textTitle{
     text-align: center;
@@ -136,5 +138,23 @@ h1 {
     margin-bottom: 20px;
 }
 
+.aboutMe {
+    border-style: solid;
+}
+
+img {
+    opacity: 1.0;
+    font: left;
+}
+
+.row {
+     background-color: rgba(255,255,255, 0.7);
+     border: 1px solid gray;
+}
+
+.leftSide {
+
+    border-right: 1px solid rgba(220,220,220, 0.5)
+}
 
 
