--- a/mysite/blog/templates/about/aboutMe.html
+++ b/mysite/blog/templates/about/aboutMe.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="../">STRONA GŁÓWNA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">O MNIE</a>
+                        <a class="nav-link" href="">O MNIE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../books">TEKSTY</a>
@@ -57,14 +57,45 @@
         <div class="content container">
             <div class="row">
 
-                <div class="col-sm-8">
+                <div class="col-sm-8 leftSide">
+                     <div class="textDetails">
 
-                    A tu coś dłużej o mnie
+                         <h1 class="textTitle">Trochę o mnie</h1>
+                         <hr>
+                            </div>
+                            <div class="panel-body">
+                                 <p>NA POCZĄTEK wypadałoby się przedstawić. Nazywam się Aleksander Cuch, mam dwadzieścia jeden lat i niemal od urodzenia
+                                 mieszkam w Gdańsku, gdzie obecnie już trzeci rok studiuję informatykę. Przeglądana przez ciebie strona
+                                 jest jednym z moich tworów, więc mam nadzieję, że w chwili, gdy ujrzałeś stronę główną, nie pomyślałeś
+                                     czegoś w stylu "Oho, to musi być dzieło studenta"!</p>
+                                <p>No ale miało być o mnie. Tak więc na uczelni w kółko piszę jakiś kod, zaś prywatnie oddaje się innemu
+                                typowi pisania - mianowicie tworzę powieść fantasy zatytułowaną "Ostatni Zwiastun", której kilka rozdziałów
+                                możesz przeczytać w dziale Teksty na mojej stronie. Dlaczego pisanie książek? Może nie będę się tu rozwijać
+                                na ten temat, ale powiem tylko, że w życiu próbowałem już kilku rzeczy - przez sześć lat trenowałem piłkę ręczną,
+                                zainteresowałem się beatboxem i występami na scenie, w liceum dołączyłem też do drużyny siatkarskiej.
+                                Wykruszyłem się z tych marzeń, chociaż sport w postaci siłowni pozostał ze mną do dziś. I nie tylko on.</p>
+                                <p>W pewnym momencie mojego życia założyłem sobie, że będę pisać książki. Ta myśl przetrwała trudy szkoły gimnazjalnej,
+                                nie poddała się przy pierwszym wstrząsie w liceum, gdy gimnazjalne piątki i czwórki zmieniły się w trójki i dwuje,
+                                    i jest ze mną do teraz, na studiach. Ktoś teraz zapyta: co ty, chłopie, piszesz książkę ponad 8 lat?!</p>
+                                <p>Odpowiedź brzmi: nie. I tak.</p>
+                                <p>Moja przygoda z literaturą jest długa, to fakt, jednak Ostatni Zwiastun jest już trzecią wersją historii, która
+                                przeszła radykalne zmiany, zresztą tak samo jak ja. Przez te lata cały czas pisałem, poprawiając warsztat, zdobywając
+                                doświadczenie i rozwijając samego siebie. W końcu nadszedł czas, aby ruszyć z kopyta. Już trochę o mnie wiesz, więc nie będę cię dalej zanudzać, jeśli jednak chcesz
+                                dowiedzieć się, dlaczego piszę i jak powstała ta strona, to zapraszam cię do dalszej lektury. Tym, którzy teraz odpuszczą,
+                                życzę miłego czytania :)</p>
+
+
+                     </div>
+
                 </div>
 
-                <div class="col-sm-4">
-                    jakaś fotka zajebista
+
+                <div class="col-sm-3">
+
+                    <img src="../static/images/myFoto.png" alt="Błąd obrazka!">
+                    <hr>
                 </div>
+
             </div>
         </div>
     </body>
