--- a/mysite/blog/templates/blog/postList.html
+++ b/mysite/blog/templates/blog/postList.html
@@ -55,7 +55,7 @@
 
         <div class="content container">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-8 leftSide">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -78,6 +78,9 @@
                         </a>
                     </div>
 
+                    <hr>
+                    <h2>Nowości:</h2>
+                    <hr>
                      {% for post in posts %}
                     <div class="post">
                         <div class="panel panel-default">
@@ -85,14 +88,14 @@
                                 <h3><a href="{{post.id}}">{{ post.title }}</a></h3>
                             </div>
                         </div>
-                        <p>{{ post.text|linebreaksbr }}</p>
                         <div class="date">
-                            <p>published: {{ post.published_date }}</p>
+                            <p>{{ post.published_date }}</p>
                         </div>
+                        <p>{{ post.text|linebreaksbr }}</p>
                     </div>
+                    
                     {% endfor %}
                 </div>
-
                 <div class="col-sm-4">
                     <div class="aboutPanel">
                         <div class="panel panel-default">
