reversed posts, comments, finish frontend

--- a/mysite/blog/templates/blog/postList.html
+++ b/mysite/blog/templates/blog/postList.html
@@ -93,18 +93,17 @@
                         </div>
                         <p>{{ post.text|linebreaksbr }}</p>
                     </div>
-                    
+
                     {% endfor %}
                 </div>
                 <div class="col-sm-4">
                     <div class="aboutPanel">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">Krótko o mnie</div>
-                            <div class="panel-body">Cześć, jestem Aleksander.</br>
+                        <h5>Krótko o mnie</h5>
+                           Cześć, jestem Aleksander.</br>
                             Studiuję informatykę, a w wolnym czasie oddaję się pasji, jaką jest pisanie.</br>
                             Tworzę opowiadania i powieść w klimatach fantasy, więc jeżeli lubisz ten gatunek, to gorąco zapraszam do zapoznania się z moją twórczością.</br>
-                            Najbardziej cenię sobie szczerą, zasłużoną krytykę ;)</div>
-                        </div>
+                            Najbardziej cenię sobie szczerą, zasłużoną krytykę ;)
+
                     </div>
                 </div>
             </div>
