--- a/mysite/blog/templates/login/loginTemplate.html
+++ b/mysite/blog/templates/login/loginTemplate.html
@@ -56,9 +56,10 @@
 
         <div class="content container">
             <div class="row">
+                <div class="col-md-4"></div>
                 <div class="col-md-4">
                     <div class="post">
-                        <h1>Logowanie</h1>
+                        <h1 class="textTitle">Logowanie</h1>
                     <hr>
                         {% if user.is_authenticated %}
 
