--- a/mysite/blog/templates/signup.html
+++ b/mysite/blog/templates/signup.html
@@ -56,10 +56,11 @@
 
         <div class="content container">
             <div class="row">
+                <div class="col-md-4"></div>
                 <div class="col-md-4">
                     <div class="post">
                       {% block content %}
-                      <h1>Rejestracja</h1>
+                      <h1 class="textTitle">Rejestracja</h1>
                         <hr>
                         <form method="post">
                           {% csrf_token %}
