--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -18,8 +18,8 @@
 
 
 
-h1, h2, h3, h4, p, input {
-    font-family: 'Lobster', cursive;
+h1, h2, h3, h4, h5, p, input {
+    font-family: 'Arial';
     margin-left: 10px;
 }
 
@@ -85,12 +85,12 @@ body {
 }
 
 .aboutPanel {
-    margin-top: 10px;
+    margin-top: 40px;
     text-align: center;
-    background-color: white;
-    opacity: 0.7;
+    background-color: rgba(255,255,255, 0.7);
+     border: 1px solid gray;
+     margin-left: 30px;
 
-    border: 1px solid gray;
 
 }
 
@@ -105,12 +105,10 @@ body {
 }
 
 .commentsSection {
-    background-color: white;
-    opacity: 0.8;
-    border-right-style: solid;
-    border-bottom-style: solid;
-    border-left-style: solid;
-    border-top: 1px solid gray;
+    background-color: rgba(255,255,255, 0.7);
+     border-bottom: 1px solid gray;
+     border-left: 1px solid gray;
+     border-right: 1px solid gray;
 
 }
 
@@ -120,10 +118,11 @@ hr {
 }
 
 .textDetails  {
-    margin-top: 10px;
-
-    opacity: 0.7;
-
+    background-color: rgba(255,255,255, 0.7);
+     border-top: 1px solid gray;
+     border-left: 1px solid gray;
+     border-right: 1px solid gray;
+        border-bottom: 1px solid gray;
 
 
 
@@ -132,6 +131,8 @@ hr {
 
 .textTitle{
     text-align: center;
+    margin-top: 15px;
+
 }
 
 h1 {
@@ -148,13 +149,13 @@ img {
 }
 
 .row {
-     background-color: rgba(255,255,255, 0.7);
-     border: 1px solid gray;
+
 }
 
 .leftSide {
 
-    border-right: 1px solid rgba(220,220,220, 0.5)
+     background-color: rgba(255,255,255, 0.7);
+     border: 1px solid gray;
 }
 
 
