--- a/mysite/blog/templates/blog/postDetails.html
+++ b/mysite/blog/templates/blog/postDetails.html
@@ -88,7 +88,7 @@
                  <div class="col-sm-8">
                      <div class="commentsSection">
                          <h3>Komentarze: </h3>
-                         {% for comment in post.comments.all %}
+                         {% for comment in post.comments.all reversed%}
                          <div class="comment">
                              <p>{{ comment.author }}: {{ comment.text }}</p>
                              <div class="date">
