--- a/mysite/blog/templates/books/bookList.html
+++ b/mysite/blog/templates/books/bookList.html
@@ -58,7 +58,8 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="post">
-                        <h1>Cykl XYZ</h1>
+                        <h1 >Teksty</h1>
+                        <hr>
                         <h2>Ostatni Zwiastun - księga pierwsza</h2>
                         <p>opiso pisopisopisopisop isopisopisopisopiso </br>
                             pisopisopisopisopis opisopisopis opisopisopisopis opisopisopisopis</br>
