--- a/mysite/blog/templates/about/aboutMe.html
+++ b/mysite/blog/templates/about/aboutMe.html
@@ -62,32 +62,156 @@
                     <hr>
 
 
-                    <p>NA POCZĄTEK wypadałoby się przedstawić. Nazywam się Aleksander Cuch, mam dwadzieścia jeden lat i niemal od urodzenia
-                        mieszkam w Gdańsku, gdzie obecnie już trzeci rok studiuję informatykę. Przeglądana przez ciebie strona
-                        jest jednym z moich tworów, więc mam nadzieję, że w chwili, gdy ujrzałeś stronę główną, nie pomyślałeś
-                        czegoś w stylu "Oho, to musi być dzieło studenta"!</p>
-                    <p>No ale miało być o mnie. Tak więc na uczelni w kółko piszę jakiś kod, zaś prywatnie oddaje się innemu
-                        typowi pisania - mianowicie tworzę powieść fantasy zatytułowaną "Ostatni Zwiastun", której kilka rozdziałów
-                        możesz przeczytać w dziale Teksty na mojej stronie. Dlaczego pisanie książek? Może nie będę się tu rozwijać
-                        na ten temat, ale powiem tylko, że w życiu próbowałem już kilku rzeczy - przez sześć lat trenowałem piłkę ręczną,
-                        zainteresowałem się beatboxem i występami na scenie, w liceum dołączyłem też do drużyny siatkarskiej.
-                        Wykruszyłem się z tych marzeń, chociaż sport w postaci siłowni pozostał ze mną do dziś. I nie tylko on.</p>
-                    <p>W pewnym momencie mojego życia założyłem sobie, że będę pisać książki. Ta myśl przetrwała trudy szkoły gimnazjalnej,
-                        nie poddała się przy pierwszym wstrząsie w liceum, gdy gimnazjalne piątki i czwórki zmieniły się w trójki i dwuje,
-                        i jest ze mną do teraz, na studiach. Ktoś teraz zapyta: co ty, chłopie, piszesz książkę ponad 8 lat?!</p>
-                    <p>Odpowiedź brzmi: nie. I tak.</p>
-                    <p>Moja przygoda z literaturą jest długa, to fakt, jednak Ostatni Zwiastun jest już trzecią wersją historii, która
-                        przeszła radykalne zmiany, zresztą tak samo jak ja. Przez te lata cały czas pisałem, poprawiając warsztat, zdobywając
-                        doświadczenie i rozwijając samego siebie. W końcu nadszedł czas, aby ruszyć z kopyta. Już trochę o mnie wiesz, więc nie będę cię dalej zanudzać, jeśli jednak chcesz
-                        dowiedzieć się, dlaczego piszę i jak powstała ta strona, to zapraszam cię do dalszej lektury. Tym, którzy teraz odpuszczą,
-                        życzę miłego czytania :)</p>
+                    <p>Na początek wypadałoby się przedstawić. Nazywam się Aleksander, mam dwadzieścia jeden lat<br> i niemal od
+                        urodzenia mieszkam w Gdańsku, gdzie już trzeci rok studiuję informatykę. Przeglądaną przez Ciebie stronę
+                        napisałem sam, więc mam nadzieję, że w chwili, gdy zobaczyłeś stronę główną, nie pomyślałeś czegoś w stylu
+                        „Oho, to musi być dzieło studenta!” :D</p>
+
+                    <p>Blog służy głównie do publikowania mojej twórczości. Jeżeli interesujesz się tematyką fantasy, to zapraszam do
+                        działu Teksty, gdzie będziesz mógł przeczytać kilka rozdziałów książki, nad którą obecnie pracuję. Będziesz
+                        miał też okazję wypowiedzieć się na ten temat w komentarzu (niezwykle cenię sobie zasłużoną krytykę).</p>
+
+                    <p>Treści na mojej stronie są też przeznaczone dla czytelnika, który szuka rady odnośnie książki do czytania lub też
+                        po prostu szuka newsów ze świata literatury. Takich podróżników zapraszam do działu Recenzje, gdzie wypowiadam się
+                        na temat przeczytanych przeze mnie książek, <br> i obserwowania strony głównej, gdzie co tydzień będzie pojawiać się
+                        ciekawy post.</p>
+
+                    <p>Niżej umieściłem dla ciekawskich rozszerzoną wersję O mnie, tymczasem życzę wszystkim ciekawej podróży po mojej stronie
+                        i zapraszam do Kontaktu :)</p>
+
+                    <hr>
+                    <h3>A więc rozsiądź się wygodnie...</h3>
+                    <hr>
+
+                    <p>Jako dziecko nienawidziłem książek! Poważnie. Jedyne, co mnie interesowało, to zabawa Bioniclami lub granie na komputerze…
+                        No dobra, głównie druga z tych rzeczy, co szybko zauważył mój tato (w końcu nie bez przyczyny uczę się na informatyka).
+                        Moi rodzice zawsze byli oczytani i przez jakiś czas naprawdę starali się przekonać mnie do książek.
+                        Jednym z ich sposobów było zawarcie ze mną układu(nie, nie mogłem negocjować ani odmówić), który wyglądał tak:
+                        mogłem grać jedną godzinę dziennie, a jeżeli chciałem grać więcej, musiałem czytać. Godzina czytania kupowała mi
+                        kolejną godzinę grania. Jak się pewnie domyślasz, czytanie to była wtedy dla mnie katorga, zło konieczne.
+                        Coś jak sesja dla studenta.</p>
+
+                    <hr>
+                    <h3>Sport to zdrowie!</h3>
+                    <hr>
+                    <p>Moja podstawówka była połączona z gimnazjum, uczyła tam moja mama. Rodzice zdecydowali, <br>że trafię do klasy z profilem
+                        sportowym, za co do dzisiaj jestem im wdzięczny. Przez sześć lat, aż do zakończenia gimnazjum, trenowałem piłkę ręczną.
+                        W międzyczasie jeden z kolegów pokazał mi, czym jest beatbox, zarażając mnie kolejną zajawką. W weekendy graliśmy mecze
+                        ligowe, a w tygodniu czasem miałem okazję pluć przez mikrofon, gdy chłopaki od sprzętu zbierali swoje zabawki po jakimś
+                        apelu lub uroczystości. Czasem robiłem to przed całą szkołą (nie chciałem napisać,<br> że plułem na całą szkołę) - nigdy nie
+                        miałem problemu z wyjściem na scenę (no, może jedynie lekką tremę) i popisania się przed wielką publicznością.
+                        Tak samo nie stresowałem się podczas meczu – najgorszy był czas oczekiwania do pierwszego gwizdka.
+                        Potem przełączałem się na tryb działania. Trema znikała, a ja dawałem z siebie wszystko. Za Narnię i za Aslana.</p>
+                    <P>Parę razy usłyszałem od ludzi, że na boisku jestem innym człowiekiem. Powiem tak: piłka ręczna to sport dla twardzieli,
+                        a ja poza boiskiem byłem raczej miłym dla wszystkich pacyfistą. Zresztą chyba nadal taki jestem. Sęk w tym, że zmieniałem
+                        się na boisku. Nie byłem największym zabijaką na parkiecie, ale kryjący mnie gość musiał się liczyć z tym, że nie będzie
+                        miał ze mną łatwo. </P>
+
+                    <hr>
+                    <h3>Początek drogi.</h3>
+                    <hr>
+                    <p>Miałem może z dwanaście lat, gdy stwierdziłem, że mam dość książek, które wybiera mi tata. Obecnie nie mam nic do
+                        „Tomka w Krainie Kangurów” czy „Pana Samochodzika”, jednak wtedy te książki wydawały mi się po prostu nudne.
+                        Nie pamiętam, jak to się stało, jednak w końcu udaliśmy się do księgarni, gdzie tata kupił mi moją pierwszą oficjalną
+                        książkę – „Harrego Pottera i Kamień Filozoficzny”! I tak załapałem bakcyla, który trzyma mnie do dzisiaj. </p>
+                    <p>Przeczytałem cała książkę jednym tchem, a potem zająłem się resztą cyklu. Potem chłonąłem powieści z uniwersum „Zwiadowców”
+                        i „Malowanego Człowieka”, a jeszcze później... Cóż, sporo tego było. W gruncie rzeczy moja przygoda z literaturą zaczęła
+                        się od kupienia wybranej przeze mnie książki. Nagle magicznym sposobem zdobywanie dodatkowego czasu grania stało się
+                        łatwe i, co ważniejsze, przyjemne. Tak, nieprzypadkowo napisałem tutaj „magicznym”, chociaż sam jestem mugolem.</p>
+                    <p>Ale skąd wziął się pomysł na pisanie?</p>
+
+                    <hr>
+                    <h3>Nie musisz zrobić tego lepiej.</h3>
+                    <hr>
+                    <p>W gimnazjum w ręce wpadł mi „Eragon” Christophera Paoliniego. Ogromnie zdziwiło mnie, gdy dowiedziałem się, że
+                        w dniu wydania swej powieści Chris miał zaledwie szesnaście lat! Ja kończyłem bodajże wtedy trzynasty albo
+                        czternasty rok życia i pełen entuzjazmu pomyślałem "Jeśli on mógł,<br> to czemu nie ja?" Stwierdziłem nawet, że
+                        go pobiję i wydam książkę przed szesnastymi urodzinami. Weź tylko potrzymaj mi piwo… A raczej soczek.</p>
+                    <p>Czytałem dużo poradników pisania. Przytoczę tu słowa jednego z autorów: "W pisaniu książki nie musisz zrobić tego lepiej
+                        od profesjonalnego pisarza. Powiedz sobie, że możesz zrobić to równie dobrze".</p>
+                    <p>Jak pewnie się domyślasz, nie udało się nawet równie dobrze :)</p>
+                    <p>Pomysł miałem, coś też tam pisałem, ale, gdy przeczytałem pierwszy napisany przeze mnie rozdział, mina mi zrzedła.
+                        Wtedy nie wiedziałem, jak ważne jest stworzenie szczegółowego planu powieści i przekonujących postaci. Po prostu opisywałem
+                        przygody mojego bohatera, który do złudzenia przypominał Willa Treaty ze Zwiadowców. O prawach związanych z plagiatem dowiedziałem
+                        się dopiero potem.</p>
+                    <p>Napisałem chyba z dziewięć krótkich rozdziałów, po czym wszystko usunąłem. Stwierdziłem po prostu, że to nie to.
+                        Skupiłem się na szkole, ręcznej i beatboxsie. Parę miesięcy później podjąłem kolejną próbę, jednak rezultaty
+                        ponownie mnie zawiodły. Wiedziałem, że mój warsztat jest słaby. Musiałem zdobyć doświadczenie. Poznać kogoś,
+                        kto powie mi, co robić.</p>
+
+                    <hr>
+                    <h3>Pbf? Z czym to się je?</h3>
+                    <hr>
+                    <p>Niektórzy pisarze mówią, że każda przeczytana przez ciebie książka jest swego rodzajem podręcznikiem pisania
+                        - tu mają rację, jednak pisanie, jak każda inna umiejętność, wymaga treningu. Ja miałem swój pomysł, to
+                        umiejętności mi brakowało. Tak trafiłem na pbf'y.</p>
+                    <p>PBF(rozwinięcie skrótu - play by forum) to z pozoru zwykłe forum, jednak jego idea opiera się na tym, że tematy
+                        forumowe są odpowiednikiem jakiś lokacji, np. temat nazywa się „Karczma na Rozstajach”. Forumowicz w postach
+                        opisuje zachowanie odgrywanej przez siebie postaci, w tym wypadku napisałby, co jego postać wyprawia w owej
+                        karczmie, co czuje, jak się tam znalazła itp. <br>Gracze nawzajem wymieniają posty, tworząc tym samym wspólną historię.
+                        Czasem też towarzyszy im Mistrz Gry, który opisuje zachowania postaci niezależnych, zmiany pogody, nagłe zwroty akcji
+                        i tak dalej – o możliwościach wpływania postaci gracza na środowisko bez zgody Mistrza Gry decyduje regulamin poszczególnego
+                        forum. Gdzieś tam też administratorzy pchają naprzód jakąś wielką fabułę, żeby gracze mieli, co robić.</p>
+                    <p>Gorąco polecam spróbować.</p>
+                    <p>Tym sposobem zabawy zainteresowałem się w połowie gimnazjum, a z ostatnim pbf'em pożegnałem się na początku 2019 roku.
+                        Przez ten czas wcieliłem się w niemal sześć postaci w uniwersum Złodzieja Pioruna Ricka Riordana, Marvelowskiego Kapitana
+                        Amerykę, wilkołaka w świecie zdominowanym przez wampiry, detektywa w autorskim świecie fantasy, młodą złodziejkę w
+                        czasie apokalipsy zombie, awanturniczego krasnoluda podróżującego szlakiem przetartym przez słynnego Wiedźmina,
+                        niewidomego pirata w World of Warcraft, a także starego paladyna zesłanego do Górniczej Doliny, gdzie rozpoczęła
+                        się akcja legendarnej gry Gothic. Trochę tych forów było, a na każdym poznawałem innych ludzi, od których się uczyłem
+                        - od czytania ich postów, po przyjmowania zasłużonej krytyki. Napracowałem się, ale opłaciło się do tego stopnia,
+                        że gdy ostatnio dołączyłem na próbę do kolejnego forum, po pierwszym napisanym przeze mnie poście administratorzy
+                        chcięli mi nadać rangę "doświadczonego użytkownika"(czy coś w tym rodzaju). Wtedy byłem już na studiach<br> i
+                        oczywiście cały czas pracowałem nad książką, głównie nad fabułą. Muszę przyznać, że nie ma do tego lepszego miejsca
+                        niż sala wykładowa mojej uczelni :)</p>
+
+                    <hr>
+                    <h3>Więc dlaczego informatyka?</h3>
+                    <hr>
+                    <p>Jak ojciec zapytał mnie po napisaniu matury, co chcę robić w życiu, powiedziałem, że chcę pisać książki.
+                        Kocham pisać i będę pisał. Kropka.</p>
+                    <p>W życiu jednak bywa różnie. Może moje książki nie okażą się bestsellerami, a wtedy musiałbym mieć inne źródło dochodu.
+                        U nas w Polsce nie ma czegoś takiego jak studia kreatywnego pisania, więc musiałem wybrać coś innego. Zawsze lubiłem
+                        komputery, więc padło na informatykę. Dochodowy kierunek? No pewnie! Przyjemny? Eeee... </p>
+                    <p>Bez bicia przyznam, że w ciągu studiów zastanawiałem się wiele razy, co ja tu k**** robię. Wiem,<br> że to nie tyczy się
+                        to tylko mnie jako studenta i mojego kierunku, aczkolwiek udało mi się w końcu odnaleźć - po prostu znalazłem to,
+                        co mnie w informatyce interesuje.</p>
+                    <p>Zaczynałem te studia z myślą o zostaniu team menadżerem, czyli kimś, kto odpowiada za pracę zespołu, jednak
+                        nie spędza całego dnia na pisaniu kodu. Zawsze byłem otwarty na ludzi i posiadam odpowiednie umiejętności,
+                        które lepiej sprawdzą się w interakcji z drugim człowiekiem niż myszką <br>i klawiaturą, jednak nikt na początku
+                        kariery nie zwerbuje mnie na stanowisko team menadżera. Będę musiał wspinać się po drabinie kariery szczebel
+                        za szczeblem, poczynając od stażysty,<br> a kończąc na… Hmm, ktoś pewnie powiedziałby teraz, że to zależy tylko ode mnie.</p>
+                    <p>I miałby rację.</p>
+
+                    <hr>
+                    <h3>Pomysł na bloga.</h3>
+                    <hr>
+                    <p>O własnej stronie myślałem już od ponad roku. Parę miesięcy temu poznałem człowieka z branży IT, który został dla mnie
+                        swego rodzaju mentorem – doradza, jak rozwijać karierę w branży, czym się obecnie zająć, żeby być atrakcyjnym dla
+                        rekruterów itp. To taki mój mistrz Yoda. Powiedział mi, <br>że fajnie by było, jakbym stworzył stronę o tym, co mnie interesuje.
+                        Chociaż jak o tym myślę powinien raczej powiedzieć: „ Fajnie byłoby, jakbyś o tym, co cię interesuję, stronę stworzył”. </p>
+                    <p>Właśnie tak powstał ten blog – z pasji, lecz iskrą, która rozpaliła płomień, był rozwój mojej kariery informatyka.
+                        Czy jesteś potencjalnym rekruterem, czy zwykłym czytelnikiem, możesz zauważyć,<br> że nie obca mi systematyczna praca,
+                        znam się trochę na technologiach internetowych, znam techniki Jedi, a na podstawie moich tekstów możesz ocenić też,
+                        czy można nazwać mnie kreatywnym. </p>
+
+                    <hr>
+                    <h3>Zapraszam do kontaktu!</h3>
+                    <hr>
+                    <p>Jeżeli sam piszesz i chciałbyś poznać moją subiektywną opinię, to chętnie przeczytam twój tekst. Profesjonalistą nie jestem,
+                        ale trochę już w tym siedzę, więc może podpowiem ci coś sensownego.<br> A może chcesz mnie o coś zapytać? Pisz śmiało!
+                        Jeśli dobrnąłeś aż tutaj, czytając moją epopeję,<br> to wiesz, że nie boję się kontaktu z ludźmi. Tak teraz patrzę tylko
+                        na mój tekst i myślę „cholera,<br> jak można tak dużo pisać o sobie?!” :)</p>
+                    <p>Mam nadzieję, że nie weźmiesz mnie za jakiegoś Narcyza!</p>
+                    <p>Niech moc będzie z Tobą.</p>
+
+
                 </div>
 
                 <div class="col-sm-3">
-                    <img src="../static/images/myFoto.png" alt="Błąd obrazka!">
+                        <img id="myImage" src="../static/images/myFoto.png" alt="Błąd obrazka!">
                     <hr>
                 </div>
-
             </div>
         </div>
     </body>
